--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,9 @@
     <header>
         <div class="contenedor-header">
         <div class="logo">
-            <img src="/images/logo-mercado-liebre.svg">
+            <div class="logo">
+                <a href="/" class="home"><img src="/images/logo-mercado-liebre.svg" alt="Logo ML"></a>
+            </div>
         </div>
         <form action="/search" method="GET" class="buscador">
             <input type="text" name="keywords" placeholder="Buscar productos, marcas y más" class="buscador-input">
